added more cases and readme