@@ -1,1 +1,7 @@
 # project-loom-examples
+
+### IDEA Run Instructions
+
+- Got File > Project Structure > Project Settings > Project and choose appropriate JDK 19 and choose language level as 19 preview.
+- Go to Run/Debug Configuration > Modify Options and enable "Add VM options" and enter "--enable-preview" in VM options.
+- Now running the main function should run things.
